force-app/main/default/objects/A_Comparison_Object__c/A_Comparison_Object__c.object-meta.xml
<CustomObject>
    <description>A Test Object Descriptionsdf</description>
    <label>A_Comparison_Object__c</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A_Test_Object_To_Deletes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>