force-app/main/default/objects/A_Comparison_Object__c/fields/asdfsadf__c.field-meta.xml
<CustomField>
    <fullName>asdfsadf__c</fullName>
    <label>asdfsadf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>