force-app/main/default/objects/A_Comparison_Object__c/fields/picklist3__c.field-meta.xml
<CustomField>
    <fullName>picklist3__c</fullName>
    <label>picklist3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>