force-app/main/default/objects/A_Comparison_Object__c/fields/picklist4__c.field-meta.xml
<CustomField>
    <fullName>picklist4__c</fullName>
    <label>picklist4</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>