force-app/main/default/objects/A_Comparison_Object__c/fields/picklist__c.field-meta.xml
<CustomField>
    <fullName>picklist__c</fullName>
    <label>picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>